--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
     <script type="text/javascript" src="https://cdn.jsdelivr.net/pyodide/v0.23.0/full/pyodide.js"></script>
 
   <script type="module" crossorigin src="./assets/index.c16e5b52.js"></script>
-  <link rel="stylesheet" href="./assets/index.44ac3579.css">
+  <link rel="stylesheet" href="./assets/index.3473b189.css">
 </head>
 
 <body id="body">
@@ -88,6 +88,16 @@
                 <span class="close">&times;</span>
             </div>
             <div class="modal-body"></div>
+        </div>
+    </div>
+
+    <div id="zetSearchModal" style="display: none;">
+        <div style="display: flex; align-items: center; margin-bottom: 10px;">
+            <!-- Added margin for spacing -->
+            <input id="Searchbar" class="Searchbar" placeholder="search notes..." onkeydown="if(event.key === 'Enter') event.preventDefault();" />
+        </div>
+        <div id="search-results" class="custom-scrollbar">
+            <div class="results-display-div"></div>
         </div>
     </div>
 
@@ -238,7 +248,7 @@
 
     <div id="nodeConnectionModal" style="display:none;">
         <input type="text" id="connectModalSearchBar" placeholder="search notes...">
-        <ul id="nodeList"></ul>
+        <ul id="nodeList" class="custom-scrollbar"></ul>
     </div>
 
     <div id="ollamaManagerModal" style="display: none;">
@@ -401,11 +411,6 @@
         </div>
 
         <div class="dropdown-content">
-            <div style="display: none;" id="search-results">
-                <div class="submenu custom-scrollbar">
-
-                </div>
-            </div>
             <div>
                 <div class="tabs">
                     <button class="tablink" onclick="openTab('tab1', this)">Notes</button>
@@ -418,54 +423,68 @@
                 <div id="tab1" class="tabcontent">
                     <!-- First tab content here -->
                     <div class="submenu">
-                        <div style="display: flex; align-items: center; margin-bottom: 10px;">
-                            <!-- Added margin for spacing -->
-                            <input id="Searchbar" class="Searchbar" placeholder="search notes..." onkeydown="if(event.key === 'Enter') event.preventDefault();" />
-                        </div>
-                        <form id="prompt-form" onsubmit="sendMessage(event);">
-                            <div>
-                                <!-- Second Row: Prompt Form -->
-                                <div style="display: flex;">
-                                    <!-- Input Group with flex layout and relative positioning -->
-                                    <div class="input-group" style="display: flex; position: relative; width: 208px;">
-                                        <!-- Textarea for main prompt -->
-                                        <textarea id="prompt" class="custom-scrollbar" rows="1" oninput="autoGrow(event);" placeholder="Enter prompt..." required></textarea>
+                        <div id="zetHorizDragHandle" class="zet-drag-handle-horiz"></div>
+                        <div id="zetVertDragHandle" class="zet-drag-handle-vert"></div>
+                        <div id="zetPaneContainer" class="zet-pane-container">
+                            <div for="zetPaneContent" class="button-label">
 
-                                        <!-- Status icons positioned similarly to function prompt -->
-                                        <div class="status-icons-container" style="position: absolute; right: 42px; top: 50%; transform: translateY(-50%);">
-                                            <!-- Status icons (Loader and Error) -->
-                                            <div class="loader" id="aiLoadingIcon" style="display:none;"></div>
-                                            <div class="error-icon-css" id="aiErrorIcon" style="display:none;">
-                                                <div class="error-x-mark">
-                                                    <span class="error-x-mark-left"></span>
-                                                    <span class="error-x-mark-right"></span>
-                                                </div>
-                                            </div>
-                                        </div>
-                                    </div>
-
-                                    <!-- Run button (Play icon) -->
-                                    <button type="submit">
-                                        <svg width="18" height="18">
-                                            <use xlink:href="#play-icon"></use>
+                                <div id="zetPaneHeader" class="zet-pane-header">
+                                    <button id="notesSearchButton" class="linkbuttons search-button" title="Search Vector Embeddings Database">
+                                        <svg class="icon">
+                                            <use xlink:href="#searchSVG"></use>
                                         </svg>
                                     </button>
-
-                                    <!-- Regenerate button (Refresh icon) -->
-                                    <button id="regen-button" type="button">
-                                        <svg width="18" height="18">
-                                            <use xlink:href="#refresh-icon"></use>
+                                    <select id="zetPaneDropdown" class="custom-select ignoreSetup"></select>
+                                    <button class="zet-add-pane-button linkbuttons search-button" title="Add a new Zettelkasten Panel">
+                                        <svg class="icon">
+                                            <use xlink:href="#plus-icon"></use>
+                                        </svg>
+                                    </button>
+                                    <button class="zet-delete-pane-button linkbuttons search-button" title="Delete Zettelkasten Panel">
+                                        <svg class="icon">
+                                            <use xlink:href="#delete-icon"></use>
                                         </svg>
                                     </button>
                                 </div>
+
+                            </div>
+
+                            <div id="zetPaneContent" class="zet-pane-content"></div>
+                        </div>
+                        <form id="prompt-form" onsubmit="sendMessage(event);">
+                            <!-- Second Row: Prompt Form -->
+                            <div style="display: flex; width: 100%; padding-top: 12px;">
+
+                                <!-- Textarea for main prompt -->
+                                <textarea id="prompt" class="custom-scrollbar" rows="1" oninput="autoGrow(event);" placeholder="Enter prompt..." required></textarea>
+
+                                <!-- Status icons positioned similarly to function prompt -->
+                                <div class="status-icons-container" style="position: relative; right: 45px; top: 6px;">
+                                    <!-- Status icons (Loader and Error) -->
+                                    <div class="loader" id="aiLoadingIcon" style="display:none;"></div>
+                                    <div class="error-icon-css" id="aiErrorIcon" style="display:none;">
+                                        <div class="error-x-mark">
+                                            <span class="error-x-mark-left"></span>
+                                            <span class="error-x-mark-right"></span>
+                                        </div>
+                                    </div>
+                                </div>
+
+                                <!-- Run button (Play icon) -->
+                                <button type="submit">
+                                    <svg width="18" height="18">
+                                        <use xlink:href="#play-icon"></use>
+                                    </svg>
+                                </button>
+
+                                <!-- Regenerate button (Refresh icon) -->
+                                <button id="regen-button" type="button">
+                                    <svg width="18" height="18">
+                                        <use xlink:href="#refresh-icon"></use>
+                                    </svg>
+                                </button>
                             </div>
                         </form>
-                        <br />
-                        <div class="zet-container" title="Zettelkasten">
-                            <div id="zetHorizDragHandle" class="zet-drag-handle-horiz"></div>
-                            <div id="zetVertDragHandle" class="zet-drag-handle-vert"></div>
-                            <textarea id="note-input" class="zettelkasten" rows="10" cols="50"></textarea>
-                        </div>
                     </div>
                 </div>
                 <div id="tab4" class="tabcontent">
@@ -1095,9 +1114,7 @@
         <symbol id="edges-icon-symbol" viewBox="0 0 18 18">
             <path stroke="#686868" fill="none" stroke-linecap="round" stroke-linejoin="round" stroke-width="0.7" d="m5.953 7.467 6.094-2.612m.096 8.114L5.857 9.676m.305-1.192a2.581 2.581 0 1 1-5.162 0 2.581 2.581 0 0 1 5.162 0ZM17 3.84a2.581 2.581 0 1 1-5.162 0 2.581 2.581 0 0 1 5.162 0Zm0 10.322a2.581 2.581 0 1 1-5.162 0 2.581 2.581 0 0 1 5.162 0Z" />
         </symbol>
-    </svg>
 
-    <svg style="display:none;">
         <defs>
             <symbol id="play-icon" viewBox="0 0 24 24">
                 <svg class="w-[25px] h-[25px] text-gray-800 dark:text-white" aria-hidden="true" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 12 16">
@@ -1123,6 +1140,24 @@
                 <svg class="w-6 h-6 text-gray-800 dark:text-white" aria-hidden="true" xmlns="http://www.w3.org/2000/svg" width="24" height="24" fill="none" viewBox="0 0 24 24">
                     <path stroke="currentColor" stroke-linecap="round" stroke-width="2.4" d="m21 21-3.5-3.5M17 10a7 7 0 1 1-14 0 7 7 0 0 1 14 0Z" />
                 </svg>
+            </symbol>
+
+            <symbol id="plus-icon" viewBox="0 0 24 24">
+                <path fill="none" stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2.4" d="M12 5v14m-7-7h14" />
+            </symbol>
+
+            <symbol id="minus-icon" viewBox="0 0 24 24">
+                <path fill="none" stroke="#686868" stroke-linecap="round" stroke-linejoin="round" stroke-width="0.7" d="M5 12h14" />
+            </symbol>
+
+            <symbol id="delete-icon" viewBox="0 0 24 24">
+                <svg class="w-6 h-6 text-gray-800 dark:text-white" aria-hidden="true" xmlns="http://www.w3.org/2000/svg" width="24" height="24" fill="none" viewBox="0 0 24 24">
+                    <path stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2.4" d="M6 6l12 12m0-12L6 18" />
+                </svg>
+            </symbol>
+
+            <symbol id="gear-icon" viewBox="0 0 24 24">
+                <path fill="none" stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="1.8" d="M19.4,12.7a7.59,7.59,0,0,0,.1-1.4,7.59,7.59,0,0,0-.1-1.4l2.1-1.6a0.5,0.5,0,0,0,.1-0.6l-2-3.5a0.5,0.5,0,0,0-.6-.2l-2.5,1A7.59,7.59,0,0,0,13.5,4.2L13,1.8a0.5,0.5,0,0,0-.5-0.4H10a0.5,0.5,0,0,0-.5,0.4L9,4.2a7.59,7.59,0,0,0-2.3.9L4.2,4.1a0.5,0.5,0,0,0-.6.2l-2,3.5a0.5,0.5,0,0,0,.1.6L4,10.3a7.59,7.59,0,0,0-.1,1.4,7.59,7.59,0,0,0,.1,1.4L2,15.7a0.5,0.5,0,0,0-.1.6l2,3.5a0.5,0.5,0,0,0,.6.2l2.5-1a7.59,7.59,0,0,0,2.3.9l0.5,2.4a0.5,0.5,0,0,0,.5.4h3a0.5,0.5,0,0,0,.5-0.4l0.5-2.4a7.59,7.59,0,0,0,2.3-.9l2.5,1a0.5,0.5,0,0,0,.6-.2l2-3.5a0.5,0.5,0,0,0-.1-.6ZM12,15.5A3.5,3.5,0,1,1,15.5,12,3.5,3.5,0,0,1,12,15.5Z" />
             </symbol>
         </defs>
     </svg>
@@ -1184,6 +1219,20 @@
 
     <script src="js/interface/dropdown/savenet.js"></script>
 
+    <script src="js/zettelkasten/zetsyntax.js"></script>
+    <script src="js/zettelkasten/zetcodemirror.js"></script>
+    <script src="js/zettelkasten/zetplacementstrategy.js"></script>
+    <script src="js/zettelkasten/zettelkasten.js"></script>
+    <script src="js/zettelkasten/zetpath.js"></script>
+    <script src="js/zettelkasten/zetsplitter.js"></script>
+
+    <script src="js/interface/dropdown/customui/customdropdown.js"></script>
+    <script src="js/interface/dropdown/customui/togglepanel.js"></script>
+    <script src="js/interface/dropdown/customui/custommodal.js"></script>
+    <script src="js/interface/dropdown/customui/displaysavedcoords.js"></script>
+    <script src="js/interface/dropdown/customui/customsliders.js"></script>
+
+
     <script src="js/interface/dropdown/tabs/notestab.js"></script>
     <script src="js/interface/dropdown/tabs/aitab.js"></script>
     <script src="js/interface/dropdown/tabs/datatab.js"></script>
@@ -1192,17 +1241,6 @@
     <script src="js/interface/dropdown/dropdown.js"></script>
     <script src="js/ai/ai-utility/handleapikeys.js"></script>
 
-    <script src="js/interface/dropdown/customui/customdropdown.js"></script>
-    <script src="js/interface/dropdown/customui/togglepanel.js"></script>
-    <script src="js/interface/dropdown/customui/custommodal.js"></script>
-    <script src="js/interface/dropdown/customui/displaysavedcoords.js"></script>
-
-    <script src="js/zettelkasten/zetsyntax.js"></script>
-    <script src="js/zettelkasten/zetcodemirror.js"></script>
-    <script src="js/zettelkasten/zetplacementstrategy.js"></script>
-    <script src="js/zettelkasten/zettelkasten.js"></script>
-    <script src="js/zettelkasten/zetpath.js"></script>
-    <script src="js/zettelkasten/zetsplitter.js"></script>
 
 
     <script src="js/mandelbrot/mandelbrot.js"></script>
