Fixes to Vision Models
Simplify creation of image nodes.

Fix some compatibility issues for handling images.

Still have issues with sending images in requests when the localhost servers are enabled.

--- a/index.html
+++ b/index.html
@@ -517,7 +517,7 @@
                                                 <select id="open-ai-select" class="model-selector custom-select">
                                                     <option value="gpt-4o">gpt-4o</option>
                                                     <option value="gpt-4">gpt-4</option>
-                                                    <option value="gpt-4v">gpt-4v</option>
+                                                    <option value="gpt-4-vision-preview">gpt-4v</option>
                                                     <option value="gpt-3.5-turbo">gpt-3.5-turbo</option>
                                                 </select>
                                             </div>
