--- a/index.html
+++ b/index.html
@@ -61,8 +61,8 @@
 
     <!-- View Matrix -->
 
-    <div ondragover="dragOverHandler(event);" ondrop="dropHandler(event);">
-        <svg id="svg_bg" viewBox="-128 -128 256 256" width="100%" height="100vh" top="0" left="0" position="fixed">
+    <div ondragover="dragOverHandler(event);" ondrop="dropHandler(event);" style="width: 100%; height: 100%;">
+        <svg id="svg_bg" viewBox="-128 -128 256 256">
             <g id="viewmatrix">
                 <g id="bg" />
                 <path id="mousePath" d="" fill="none" stroke="rgb(50 51 62 / 80%)" stroke-width="0.01" />
