Fixes for Safari/Mac

--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
     <script type="text/javascript" src="https://cdn.jsdelivr.net/pyodide/v0.23.0/full/pyodide.js"></script>
 
   <script type="module" crossorigin src="./assets/index.c16e5b52.js"></script>
-  <link rel="stylesheet" href="./assets/index.39741e53.css">
+  <link rel="stylesheet" href="./assets/index.46b6b83c.css">
 </head>
 
 <body id="body">
@@ -63,8 +63,8 @@
 
     <!-- View Matrix -->
 
-    <div ondragover="dragOverHandler(event);" ondrop="dropHandler(event);">
-        <svg id="svg_bg" viewBox="-128 -128 256 256" width="100%" height="100vh" top="0" left="0" position="fixed">
+    <div ondragover="dragOverHandler(event);" ondrop="dropHandler(event);" style="width: 100%; height: 100%;">
+        <svg id="svg_bg" viewBox="-128 -128 256 256">
             <g id="viewmatrix">
                 <g id="bg" />
                 <path id="mousePath" d="" fill="none" stroke="rgb(50 51 62 / 80%)" stroke-width="0.01" />
