--- a/index.html
+++ b/index.html
@@ -501,6 +501,7 @@
                                             <div class="dropdown-container">
                                                 <select id="inference-select" class="model-selector custom-select">
                                                     <option value="OpenAi">OpenAi</option>
+                                                    <option value="anthropic">Anthropic</option>
                                                     <option value="GROQ">Groq</option>
                                                     <option value="ollama">Ollama</option>
                                                     <option value="custom">Custom</option>
@@ -512,10 +513,20 @@
                                             <label for="open-ai-select">OpenAi</label>
                                             <div class="dropdown-container">
                                                 <select id="open-ai-select" class="model-selector custom-select">
-                                                    <option value="gpt-4o">gpt-4o</option>
-                                                    <option value="gpt-4">gpt-4</option>
-                                                    <option value="gpt-4-vision-preview">gpt-4v</option>
-                                                    <option value="gpt-3.5-turbo">gpt-3.5-turbo</option>
+                                                    <option value="gpt-4o">GPT-4o</option>
+                                                    <option value="gpt-4">GPT-4</option>
+                                                    <option value="gpt-4-vision-preview">GPT-4v</option>
+                                                    <option value="gpt-3.5-turbo">GPT-3.5-turbo</option>
+                                                </select>
+                                            </div>
+                                        </div>
+                                        <div class="dropdown-wrapper" id="wrapper-anthropic">
+                                            <label for="anthropic-select">Claude 3</label>
+                                            <div class="dropdown-container">
+                                                <select id="anthropic-select" class="model-selector custom-select">
+                                                    <option value="claude-3-opus-20240229">Opus</option>
+                                                    <option value="claude-3-sonnet-20240229">Sonnet</option>
+                                                    <option value="claude-3-haiku-20240307">Haiku</option>
                                                 </select>
                                             </div>
                                         </div>
@@ -523,10 +534,10 @@
                                             <label for="groq-select">Groq</label>
                                             <div class="dropdown-container">
                                                 <select id="groq-select" class="model-selector custom-select">
-                                                    <option value="gemma-7b-it">gemma-7b-it</option>
-                                                    <option value="mixtral-8x7b-32768">mixtral 8x7b 32k</option>
-                                                    <option value="llama3-8b-8192">llama3-8b</option>
-                                                    <option value="llama3-70b-8192">llama3-70b</option>
+                                                    <option value="gemma-7b-it">Gemma-7b-it</option>
+                                                    <option value="mixtral-8x7b-32768">Mixtral 8x7b 32k</option>
+                                                    <option value="llama3-8b-8192">Llama3-8b</option>
+                                                    <option value="llama3-70b-8192">Llama3-70b</option>
                                                 </select>
                                             </div>
                                         </div>
@@ -682,7 +693,7 @@
                                             <label for="GROQ-api-key-input">GROQ:</label>
                                             <input type="password" id="GROQ-api-key-input" class="api-input">
                                         </div>
-                                        <div class="google-key-input" style="display: none;">
+                                        <div class="google-key-input">
                                             <label for="anthropic-api-key-input">Anthropic:</label>
                                             <input type="password" id="anthropic-api-key-input" class="api-input">
                                         </div>
