Display VectorDB results within Ai Nodes
Display search results when hovering over Ai Node references to snippets of text retrieved from the vector db.

--- a/index.html
+++ b/index.html
@@ -1245,6 +1245,7 @@
     <script src="js/interface/dropdown/customui/custommodal.js"></script>
     <script src="js/interface/dropdown/customui/displaysavedcoords.js"></script>
     <script src="js/interface/dropdown/customui/customsliders.js"></script>
+    <script src="js/interface/dropdown/customui/customtooltip.js"></script>
 
 
     <script src="js/interface/dropdown/tabs/notestab.js"></script>
