Fix Connect Docs to Ai Nodes

--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <link rel="icon" href="./assets/favicon.13fdf577.ico" type="image/x-icon">
     
     <meta charset="UTF-8">
+    <meta name="description" content="Fractal Graph-of-Thought. Experimental Mind-Mapping for Ai-Agents, Web-Links, Notes, and Code.">
 
     <script src="https://cdn.jsdelivr.net/npm/pdfjs-dist@3.9.179/build/pdf.min.js"></script>
 
