--- a/index.html
+++ b/index.html
@@ -308,6 +308,24 @@
         </div>
     </div>
 
+    <div id="promptLibraryModalContent" style="display: none;">
+        <div class="prompt-library-container">
+            <div class="prompt-list-container">
+                <div class="prompt-list custom-scrollbar"></div>
+                <div class="prompt-list-buttons">
+                    <button class="add-prompt-button">+</button>
+                    <button class="delete-prompt-button">x</button>
+                </div>
+            </div>
+            <div class="prompt-content">
+                <textarea class="prompt-content-textarea custom-scrollbar"></textarea>
+                <div class="prompt-buttons">
+                    <button class="set-instructions-button">Set Instructions</button>
+                </div>
+            </div>
+        </div>
+    </div>
+
     <div id="alertModal" style="display: none;">
         <!-- Content for the alert modal -->
         <p>This is an alert message.</p>
