Post-road-trip housekeeping

--- a/index.html
+++ b/index.html
@@ -550,6 +550,7 @@
                                             <div class="dropdown-container">
                                                 <select id="open-ai-select" class="model-selector custom-select">
                                                     <option value="gpt-4o">GPT-4o</option>
+                                                    <option value="gpt-4o-mini">GPT-4o-mini</option>
                                                     <option value="gpt-4">GPT-4</option>
                                                     <option value="gpt-4-vision-preview">GPT-4v</option>
                                                     <option value="gpt-3.5-turbo">GPT-3.5-turbo</option>
