Post-road-trip housekeeping

--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
     <script type="text/javascript" src="https://cdn.jsdelivr.net/pyodide/v0.23.0/full/pyodide.js"></script>
 
   <script type="module" crossorigin src="./assets/index.c16e5b52.js"></script>
-  <link rel="stylesheet" href="./assets/index.eb315333.css">
+  <link rel="stylesheet" href="./assets/index.f498ea88.css">
 </head>
 
 <body id="body">
@@ -547,6 +547,7 @@
                                             <div class="dropdown-container">
                                                 <select id="open-ai-select" class="model-selector custom-select">
                                                     <option value="gpt-4o">GPT-4o</option>
+                                                    <option value="gpt-4o-mini">GPT-4o-mini</option>
                                                     <option value="gpt-4">GPT-4</option>
                                                     <option value="gpt-4-vision-preview">GPT-4v</option>
                                                     <option value="gpt-3.5-turbo">GPT-3.5-turbo</option>
