Fix Saved Coordinates
-Ensure saved coordinates load on refresh.
-Attempt to fix vision model image requests, but the Ai currently denies being able to receive images.

--- a/resources/html/tabs/aitab.html
+++ b/resources/html/tabs/aitab.html
@@ -25,7 +25,7 @@
                                 <option value="gpt-4o">GPT-4o</option>
                                 <option value="gpt-4o-mini">GPT-4o-mini</option>
                                 <option value="gpt-4">GPT-4</option>
-                                <option value="gpt-4-vision-preview">GPT-4v</option>
+                                <option value="gpt-4-turbo">GPT-4-turbo</option>
                                 <option value="gpt-3.5-turbo">GPT-3.5-turbo</option>
                             </select>
                         </div>
