--- a/resources/html/tabs/helptab.html
+++ b/resources/html/tabs/helptab.html
@@ -11,8 +11,8 @@
             </td>
         </tr>
         <tr>
-            <td><a href="https://github.com/satellitecomponent/Neurite" id="clickable-link">Neurite Github</a></td>
-            <td>Visit our Github for extended documentation.</td>
+            <td><a href="https://github.com/satellitecomponent/Neurite" id="clickable-link">Github</a></td>
+            <td>See Neurite's Github for more info.</td>
         </tr>
         <tr>
             <td>
