--- a/resources/html/tabs/helptab.html
+++ b/resources/html/tabs/helptab.html
@@ -12,7 +12,7 @@
         </tr>
         <tr>
             <td><a href="https://github.com/satellitecomponent/Neurite" id="clickable-link">Github</a></td>
-            <td>See Neurite's Github for more info.</td>
+            <td><button id="sign-in-btn" class="key-button">Sign In</button></td>
         </tr>
         <tr>
             <td>
