--- a/resources/html/tabs/aitab.html
+++ b/resources/html/tabs/aitab.html
@@ -23,11 +23,11 @@
                         <label for="open-ai-select">OpenAi</label>
                         <div class="dropdown-container">
                             <select id="open-ai-select" class="model-selector custom-select">
-                                <option value="gpt-4o">GPT-4o</option>
-                                <option value="gpt-4o-mini">GPT-4o-mini</option>
-                                <option value="gpt-4">GPT-4</option>
-                                <option value="gpt-4-turbo">GPT-4-turbo</option>
-                                <option value="gpt-3.5-turbo">GPT-3.5-turbo</option>
+                                <option value="gpt-4o">GPT 4o</option>
+                                <option value="gpt-4o-mini">GPT 4o mini</option>
+                                <option value="gpt-4">GPT 4</option>
+                                <option value="gpt-4-turbo">GPT 4 turbo</option>
+                                <option value="gpt-3.5-turbo">GPT 3.5 turbo</option>
                             </select>
                         </div>
                     </div>
@@ -49,6 +49,7 @@
                                 <option value="gemma2-9b-it">Gemma2-9b-it</option>
                                 <option value="gemma-7b-it">Gemma-7b-it</option>
                                 <option value="mixtral-8x7b-32768">Mixtral 8x7b 32k</option>
+                                <option value="deepseek-r1-distill-llama-70b">Deepseek R1</option>
                                 <option value="llama-3.2-3b-preview">Llama 3.2 3b</option>
                                 <option value="llama-3.2-1b-preview">Llama 3.2 1b</option>
                                 <option value="llama-3.1-70b-versatile">Llama 3.1 70b</option>
