--- a/resources/html/tabs/networkstab.html
+++ b/resources/html/tabs/networkstab.html
@@ -12,8 +12,8 @@
             <a id="new-save-button">Save As...</a>
             <a id="clear-button">Clear</a>
             <div id="clear-sure" style="display:none">
-                <a id="clear-unsure-button">no</a>
-                <a id="clear-sure-button">yes</a>
+                <a id="clear-sure-button">Yes</a>
+                <a id="clear-unsure-button">No</a>
             </div>
         </div>
         <div id="savedCoordinatesContainerTop" class="saved-coordinates-container"></div>
