--- a/resources/html/modals.html
+++ b/resources/html/modals.html
@@ -162,11 +162,11 @@
     <div style="display: flex; flex-direction: column; align-items: center;">
         <div style="padding-bottom: 20px;">
             <label for="node-tag">Node Tag:</label>
-            <input type="text" id="node-tag" value="##" style="width:80px;" />
+            <input type="text" id="node-tag" data-key="node" value="##" style="width:80px;" />
         </div>
         <div>
-            <label for="node-tag">Link Tag:</label>
-            <input type="text" id="ref-tag" value="[[" style="width:80px;" />
+            <label for="ref-tag">Link Tag:</label>
+            <input type="text" id="ref-tag" data-key="ref" value="[[" style="width:80px;" />
         </div>
     </div>
     <br />
